# ciderPolarity

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
ciderpolarity/: CIDER.py  __init__.py  create_embeddings.py  create_vader.py  load_polarities.py  run_bootstrapping.py  stopwords.py  suggest_seeds.py  utils_funcs.py
tests/: test_CIDER.py
